force-app/main/default/objects/ServiceContractAll__c/ServiceContractAll__c.object-meta.xml
<CustomObject>
    <label>サービス_全体</label>
    <nameField>
        <label>サービス_全体名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>