force-app/main/default/objects/ServiceContractAll__c/fields/AcceptEmployeeInfoSearchNoteItems__c.field-meta.xml
<CustomField>
    <fullName>AcceptEmployeeInfoSearchNoteItems__c</fullName>
    <label>受付社員情報検索注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>