force-app/main/default/objects/ServiceContractAll__c/fields/AcceptNoteItemsManual__c.field-meta.xml
<CustomField>
    <fullName>AcceptNoteItemsManual__c</fullName>
    <label>受付注意事項マニュアル_表示用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>