force-app/main/default/objects/ServiceContractAll__c/fields/AcceptRealEstateInfoSearchNoteItems__c.field-meta.xml
<CustomField>
    <fullName>AcceptRealEstateInfoSearchNoteItems__c</fullName>
    <label>受付物件情報検索注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>