force-app/main/default/objects/ServiceContractAll__c/fields/AcceptSecondaryCheckPersonCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>AcceptSecondaryCheckPersonCorrespondence__c</fullName>
    <label>受付二次チェック者対応_表示用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>