force-app/main/default/objects/ServiceContractAll__c/fields/AdvanceInterestRateNote__c.field-meta.xml
<CustomField>
    <fullName>AdvanceInterestRateNote__c</fullName>
    <label>立替金利備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>