force-app/main/default/objects/ServiceContractAll__c/fields/AntisocialCheckMethod__c.field-meta.xml
<CustomField>
    <fullName>AntisocialCheckMethod__c</fullName>
    <label>反社チェック方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>