force-app/main/default/objects/ServiceContractAll__c/fields/AntisocialCheckTarget__c.field-meta.xml
<CustomField>
    <fullName>AntisocialCheckTarget__c</fullName>
    <label>反社チェック対象</label>
    <length>255</length>
    <type>Text</type>
</CustomField>