force-app/main/default/objects/ServiceContractAll__c/fields/AntisocialExclusionCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>AntisocialExclusionCorrespondence__c</fullName>
    <label>反社排除対応</label>
    <length>255</length>
    <type>Text</type>
</CustomField>