force-app/main/default/objects/ServiceContractAll__c/fields/ApplicantConfirmDateAlertDisplayUse__c.field-meta.xml
<CustomField>
    <fullName>ApplicantConfirmDateAlertDisplayUse__c</fullName>
    <label>適用者確認日アラート表示用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>