force-app/main/default/objects/ServiceContractAll__c/fields/ApplicationFormArriveDateAlertDisplayUse__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFormArriveDateAlertDisplayUse__c</fullName>
    <label>申請書着日アラート表示用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>