force-app/main/default/objects/ServiceContractAll__c/fields/ApplicationRouteLeave2__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRouteLeave2__c</fullName>
    <label>申請ルート退去2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>