force-app/main/default/objects/ServiceContractAll__c/fields/ApplicationRouteLeave4__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRouteLeave4__c</fullName>
    <label>申請ルート退去4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>