force-app/main/default/objects/ServiceContractAll__c/fields/ArrangeRequestAlert__c.field-meta.xml
<CustomField>
    <fullName>ArrangeRequestAlert__c</fullName>
    <label>手配依頼書アラート</label>
    <length>255</length>
    <type>Text</type>
</CustomField>