force-app/main/default/objects/ServiceContractAll__c/fields/AtHomeNotDisplayIs__c.field-meta.xml
<CustomField>
    <fullName>AtHomeNotDisplayIs__c</fullName>
    <label>在宅非表示フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>