force-app/main/default/objects/ServiceContractAll__c/fields/AttachedFileVolumeUpperLimit__c.field-meta.xml
<CustomField>
    <fullName>AttachedFileVolumeUpperLimit__c</fullName>
    <label>添付ファイル容量上限</label>
    <length>255</length>
    <type>Text</type>
</CustomField>