force-app/main/default/objects/ServiceContractAll__c/fields/BillingMasterAdditionCharge__c.field-meta.xml
<CustomField>
    <fullName>BillingMasterAdditionCharge__c</fullName>
    <label>請求マスター追加者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>