force-app/main/default/objects/ServiceContractAll__c/fields/BillingMasterAdditionDate__c.field-meta.xml
<CustomField>
    <fullName>BillingMasterAdditionDate__c</fullName>
    <label>請求マスター追加日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>