force-app/main/default/objects/ServiceContractAll__c/fields/BillingMasterChangeConfirmer__c.field-meta.xml
<CustomField>
    <fullName>BillingMasterChangeConfirmer__c</fullName>
    <label>請求マスター変更確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>