force-app/main/default/objects/ServiceContractAll__c/fields/BillingMasterChangeContent__c.field-meta.xml
<CustomField>
    <fullName>BillingMasterChangeContent__c</fullName>
    <label>請求マスター変更内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>