force-app/main/default/objects/ServiceContractAll__c/fields/BillingMasterChangeDate__c.field-meta.xml
<CustomField>
    <fullName>BillingMasterChangeDate__c</fullName>
    <label>請求マスター変更日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>