force-app/main/default/objects/ServiceContractAll__c/fields/BranchOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>BranchOfficeCode__c</fullName>
    <label>支店コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>