force-app/main/default/objects/ServiceContractAll__c/fields/CancelGarageManual__c.field-meta.xml
<CustomField>
    <fullName>CancelGarageManual__c</fullName>
    <label>解約駐車場マニュアル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>