force-app/main/default/objects/ServiceContractAll__c/fields/CancelOtherByCompanyDisplayUseList__c.field-meta.xml
<CustomField>
    <fullName>CancelOtherByCompanyDisplayUseList__c</fullName>
    <label>解約他企業別表示用リスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>