force-app/main/default/objects/ServiceContractAll__c/fields/CancelReasonManual__c.field-meta.xml
<CustomField>
    <fullName>CancelReasonManual__c</fullName>
    <label>解約理由入力マニュアル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>