force-app/main/default/objects/ServiceContractAll__c/fields/CancelStaff__c.field-meta.xml
<CustomField>
    <fullName>CancelStaff__c</fullName>
    <label>解約担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>