force-app/main/default/objects/ServiceContractAll__c/fields/ChangeCommissionConfirm__c.field-meta.xml
<CustomField>
    <fullName>ChangeCommissionConfirm__c</fullName>
    <label>入替手続料確定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>