force-app/main/default/objects/ServiceContractAll__c/fields/ChangeCommissionNote__c.field-meta.xml
<CustomField>
    <fullName>ChangeCommissionNote__c</fullName>
    <label>入替手続料備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>