force-app/main/default/objects/ServiceContractAll__c/fields/CleanArrangeFee__c.field-meta.xml
<CustomField>
    <fullName>CleanArrangeFee__c</fullName>
    <label>清掃手配費</label>
    <length>255</length>
    <type>Text</type>
</CustomField>