force-app/main/default/objects/ServiceContractAll__c/fields/CleanArrangeFeeNote__c.field-meta.xml
<CustomField>
    <fullName>CleanArrangeFeeNote__c</fullName>
    <label>清掃手配費備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>