force-app/main/default/objects/ServiceContractAll__c/fields/CompanySend__c.field-meta.xml
<CustomField>
    <fullName>CompanySend__c</fullName>
    <label>企業送付</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>