force-app/main/default/objects/ServiceContractAll__c/fields/ConsignmentFeeChangeDate__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentFeeChangeDate__c</fullName>
    <label>委託料変更日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>