force-app/main/default/objects/ServiceContractAll__c/fields/ConsignmentFeeCollectBankAccount__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentFeeCollectBankAccount__c</fullName>
    <label>経理委託料回収口座ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>