force-app/main/default/objects/ServiceContractAll__c/fields/ConsignmentFeeCollectDateMasterUse__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentFeeCollectDateMasterUse__c</fullName>
    <label>委託料回収日_マスター用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>