force-app/main/default/objects/ServiceContractAll__c/fields/ConsignmentFeeFixAmountSetting__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentFeeFixAmountSetting__c</fullName>
    <label>委託料固定額設定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>