force-app/main/default/objects/ServiceContractAll__c/fields/ConsignmentFeeStandard__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentFeeStandard__c</fullName>
    <label>委託料基準</label>
    <length>255</length>
    <type>Text</type>
</CustomField>