force-app/main/default/objects/ServiceContractAll__c/fields/ConsignmentPersonCode__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentPersonCode__c</fullName>
    <label>委託者コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>