force-app/main/default/objects/ServiceContractAll__c/fields/ContractCompanyRefundRule__c.field-meta.xml
<CustomField>
    <fullName>ContractCompanyRefundRule__c</fullName>
    <label>契約書企業返金ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>