force-app/main/default/objects/ServiceContractAll__c/fields/ContractMailOperatingCosts__c.field-meta.xml
<CustomField>
    <fullName>ContractMailOperatingCosts__c</fullName>
    <label>契約書郵送業務費</label>
    <length>255</length>
    <type>Text</type>
</CustomField>