force-app/main/default/objects/ServiceContractAll__c/fields/ContractMoneyAdditionRemittanceBilling__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyAdditionRemittanceBilling__c</fullName>
    <label>契約金追加送金請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>