force-app/main/default/objects/ServiceContractAll__c/fields/ContractMoneyBillingChangeDate__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBillingChangeDate__c</fullName>
    <label>契約金請求変更日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>