force-app/main/default/objects/ServiceContractAll__c/fields/ContractMoneyBillingConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBillingConfirmDate__c</fullName>
    <label>契約金請求確認日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>