force-app/main/default/objects/ServiceContractAll__c/fields/ContractMoneyBillingContent__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBillingContent__c</fullName>
    <label>契約金請求内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>