force-app/main/default/objects/ServiceContractAll__c/fields/ContractMoneyBillingNote__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyBillingNote__c</fullName>
    <label>契約金請求備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>