force-app/main/default/objects/ServiceContractAll__c/fields/ContractMoneyCreatedDateSpecify__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyCreatedDateSpecify__c</fullName>
    <label>契約金作成日指定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>