force-app/main/default/objects/ServiceContractAll__c/fields/ContractMoneyDivisionCreateCategory__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyDivisionCreateCategory__c</fullName>
    <label>契約金分割作成区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>