force-app/main/default/objects/ServiceContractAll__c/fields/ContractMoneyOffsetRefundFeasibility__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyOffsetRefundFeasibility__c</fullName>
    <label>契約金相殺返金可否</label>
    <length>255</length>
    <type>Text</type>
</CustomField>