force-app/main/default/objects/ServiceContractAll__c/fields/ContractMoneySpecialAttachedRule__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneySpecialAttachedRule__c</fullName>
    <label>契約金特殊添付ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>