force-app/main/default/objects/ServiceContractAll__c/fields/ContractStorage__c.field-meta.xml
<CustomField>
    <fullName>ContractStorage__c</fullName>
    <label>契約書保管</label>
    <length>255</length>
    <type>Text</type>
</CustomField>