force-app/main/default/objects/ServiceContractAll__c/fields/CorporateHousingCCCustomerSPTPlease__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingCCCustomerSPTPlease__c</fullName>
    <label>社宅CCお客様SPTからのお願い</label>
    <length>255</length>
    <type>Text</type>
</CustomField>