force-app/main/default/objects/ServiceContractAll__c/fields/CorporateHousingCCIs__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingCCIs__c</fullName>
    <label>社宅CC有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>