force-app/main/default/objects/ServiceContractAll__c/fields/CorporateHousingCCLabel__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingCCLabel__c</fullName>
    <label>社宅CCラベル表記</label>
    <length>255</length>
    <type>Text</type>
</CustomField>