force-app/main/default/objects/ServiceContractAll__c/fields/CustomerMatter__c.field-meta.xml
<CustomField>
    <fullName>CustomerMatter__c</fullName>
    <label>カスタマー案件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>