force-app/main/default/objects/ServiceContractAll__c/fields/CustomerSupportCharge__c.field-meta.xml
<CustomField>
    <fullName>CustomerSupportCharge__c</fullName>
    <label>社宅CC担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>