force-app/main/default/objects/ServiceContractAll__c/fields/CustomerSupportNote__c.field-meta.xml
<CustomField>
    <fullName>CustomerSupportNote__c</fullName>
    <label>社宅CC備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>