force-app/main/default/objects/ServiceContractAll__c/fields/CustomerSupportPleaseNote__c.field-meta.xml
<CustomField>
    <fullName>CustomerSupportPleaseNote__c</fullName>
    <label>社宅CCお客様SPTからのお願い</label>
    <length>255</length>
    <type>Text</type>
</CustomField>