force-app/main/default/objects/ServiceContractAll__c/fields/DebitBankAccountCategory__c.field-meta.xml
<CustomField>
    <fullName>DebitBankAccountCategory__c</fullName>
    <label>引落口座区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>