force-app/main/default/objects/ServiceContractAll__c/fields/DebitBankAccountName__c.field-meta.xml
<CustomField>
    <fullName>DebitBankAccountName__c</fullName>
    <label>引落口座名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>