force-app/main/default/objects/ServiceContractAll__c/fields/DecisionAuthority__c.field-meta.xml
<CustomField>
    <fullName>DecisionAuthority__c</fullName>
    <label>決裁権限</label>
    <length>255</length>
    <type>Text</type>
</CustomField>