force-app/main/default/objects/ServiceContractAll__c/fields/DepositAutoRegistrationExceptIs__c.field-meta.xml
<CustomField>
    <fullName>DepositAutoRegistrationExceptIs__c</fullName>
    <label>預入自動登録除外フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>