force-app/main/default/objects/ServiceContractAll__c/fields/FileReceptionUsePass__c.field-meta.xml
<CustomField>
    <fullName>FileReceptionUsePass__c</fullName>
    <label>ファイル受信用パスワード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>