force-app/main/default/objects/ServiceContractAll__c/fields/FileReceptionUsePassNote__c.field-meta.xml
<CustomField>
    <fullName>FileReceptionUsePassNote__c</fullName>
    <label>ファイル受信用パスワード備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>