force-app/main/default/objects/ServiceContractAll__c/fields/FileSendRule__c.field-meta.xml
<CustomField>
    <fullName>FileSendRule__c</fullName>
    <label>ファイル送信ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>