force-app/main/default/objects/ServiceContractAll__c/fields/FinanceNote__c.field-meta.xml
<CustomField>
    <fullName>FinanceNote__c</fullName>
    <label>経理備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>