force-app/main/default/objects/ServiceContractAll__c/fields/FireInsuranceCompanyContract__c.field-meta.xml
<CustomField>
    <fullName>FireInsuranceCompanyContract__c</fullName>
    <label>火災保険会社契約</label>
    <length>255</length>
    <type>Text</type>
</CustomField>