force-app/main/default/objects/ServiceContractAll__c/fields/GarageApplicationRoute4__c.field-meta.xml
<CustomField>
    <fullName>GarageApplicationRoute4__c</fullName>
    <label>申請ルート駐車場4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>