force-app/main/default/objects/ServiceContractAll__c/fields/GarageAssignRule__c.field-meta.xml
<CustomField>
    <fullName>GarageAssignRule__c</fullName>
    <label>駐車場宛がいルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>