force-app/main/default/objects/ServiceContractAll__c/fields/HouseholdAloneDistinction__c.field-meta.xml
<CustomField>
    <fullName>HouseholdAloneDistinction__c</fullName>
    <label>世帯単身判別フィールド</label>
    <length>255</length>
    <type>Text</type>
</CustomField>