force-app/main/default/objects/ServiceContractAll__c/fields/IncludingInsuranceJoinDestination__c.field-meta.xml
<CustomField>
    <fullName>IncludingInsuranceJoinDestination__c</fullName>
    <label>包括保険加入先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>