force-app/main/default/objects/ServiceContractAll__c/fields/IndividualReminderStartStandardDays__c.field-meta.xml
<CustomField>
    <fullName>IndividualReminderStartStandardDays__c</fullName>
    <label>個別督促開始基準日数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>