force-app/main/default/objects/ServiceContractAll__c/fields/InsuranceMemo__c.field-meta.xml
<CustomField>
    <fullName>InsuranceMemo__c</fullName>
    <label>保険メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>