force-app/main/default/objects/ServiceContractAll__c/fields/InsuranceType__c.field-meta.xml
<CustomField>
    <fullName>InsuranceType__c</fullName>
    <label>保険種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>