force-app/main/default/objects/ServiceContractAll__c/fields/IsCancel__c.field-meta.xml
<CustomField>
    <fullName>IsCancel__c</fullName>
    <label>解約可不可</label>
    <length>255</length>
    <type>Text</type>
</CustomField>