force-app/main/default/objects/ServiceContractAll__c/fields/IsChangeOperationCharges__c.field-meta.xml
<CustomField>
    <fullName>IsChangeOperationCharges__c</fullName>
    <label>入替業務手数料同時フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>