force-app/main/default/objects/ServiceContractAll__c/fields/IsCheckList__c.field-meta.xml
<CustomField>
    <fullName>IsCheckList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>チェックリスト要</label>
    <type>Checkbox</type>
</CustomField>