force-app/main/default/objects/ServiceContractAll__c/fields/IsCleanArrangeFee__c.field-meta.xml
<CustomField>
    <fullName>IsCleanArrangeFee__c</fullName>
    <label>清掃手配費同時フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>