force-app/main/default/objects/ServiceContractAll__c/fields/IsContractChangeCharges__c.field-meta.xml
<CustomField>
    <fullName>IsContractChangeCharges__c</fullName>
    <label>名変手数料同時フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>