force-app/main/default/objects/ServiceContractAll__c/fields/IsDataOffer__c.field-meta.xml
<CustomField>
    <fullName>IsDataOffer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>データ提供有無</label>
    <type>Checkbox</type>
</CustomField>