force-app/main/default/objects/ServiceContractAll__c/fields/IsDecisionApplicationFormAutoSend__c.field-meta.xml
<CustomField>
    <fullName>IsDecisionApplicationFormAutoSend__c</fullName>
    <label>決裁申請書自動送信_対応フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>