force-app/main/default/objects/ServiceContractAll__c/fields/IsListSupport__c.field-meta.xml
<CustomField>
    <fullName>IsListSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リスト対応</label>
    <type>Checkbox</type>
</CustomField>