force-app/main/default/objects/ServiceContractAll__c/fields/IsMailOperatingCosts__c.field-meta.xml
<CustomField>
    <fullName>IsMailOperatingCosts__c</fullName>
    <label>郵送業務費同時フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>