force-app/main/default/objects/ServiceContractAll__c/fields/IsTransferChargesUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>IsTransferChargesUnitPrice__c</fullName>
    <label>振込手数料単価同時フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>