force-app/main/default/objects/ServiceContractAll__c/fields/KtCorrespondenceCompanyIs__c.field-meta.xml
<CustomField>
    <fullName>KtCorrespondenceCompanyIs__c</fullName>
    <label>KT対応企業フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>