force-app/main/default/objects/ServiceContractAll__c/fields/LeopalacePointUseIs__c.field-meta.xml
<CustomField>
    <fullName>LeopalacePointUseIs__c</fullName>
    <label>レオパレスポイント利用有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>