force-app/main/default/objects/ServiceContractAll__c/fields/ManagementHousesCategory__c.field-meta.xml
<CustomField>
    <fullName>ManagementHousesCategory__c</fullName>
    <label>管理戸数区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>