force-app/main/default/objects/ServiceContractAll__c/fields/MovingBillingChangeDate__c.field-meta.xml
<CustomField>
    <fullName>MovingBillingChangeDate__c</fullName>
    <label>引越請求変更日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>