force-app/main/default/objects/ServiceContractAll__c/fields/MovingBillingConfirmCharge__c.field-meta.xml
<CustomField>
    <fullName>MovingBillingConfirmCharge__c</fullName>
    <label>引越請求確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>