force-app/main/default/objects/ServiceContractAll__c/fields/MovingCollectDate__c.field-meta.xml
<CustomField>
    <fullName>MovingCollectDate__c</fullName>
    <label>引越回収日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>