force-app/main/default/objects/ServiceContractAll__c/fields/MovingCollectDateNextBusinessDayIs__c.field-meta.xml
<CustomField>
    <fullName>MovingCollectDateNextBusinessDayIs__c</fullName>
    <label>引越回収日翌営業日フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>