force-app/main/default/objects/ServiceContractAll__c/fields/MovingCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>MovingCorrespondence__c</fullName>
    <label>引越し対応</label>
    <length>255</length>
    <type>Text</type>
</CustomField>