force-app/main/default/objects/ServiceContractAll__c/fields/MovingDeadline__c.field-meta.xml
<CustomField>
    <fullName>MovingDeadline__c</fullName>
    <label>引越締め日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>