force-app/main/default/objects/ServiceContractAll__c/fields/MovingIndividualDetailNecessity__c.field-meta.xml
<CustomField>
    <fullName>MovingIndividualDetailNecessity__c</fullName>
    <label>引越個別明細要否</label>
    <length>255</length>
    <type>Text</type>
</CustomField>