force-app/main/default/objects/ServiceContractAll__c/fields/MovingNote4__c.field-meta.xml
<CustomField>
    <fullName>MovingNote4__c</fullName>
    <label>引越備考４</label>
    <length>255</length>
    <type>Text</type>
</CustomField>