force-app/main/default/objects/ServiceContractAll__c/fields/MovingNotStandardOperationDescription__c.field-meta.xml
<CustomField>
    <fullName>MovingNotStandardOperationDescription__c</fullName>
    <label>引越非定型業務記述</label>
    <length>255</length>
    <type>Text</type>
</CustomField>