force-app/main/default/objects/ServiceContractAll__c/fields/MovingProcedureComment__c.field-meta.xml
<CustomField>
    <fullName>MovingProcedureComment__c</fullName>
    <label>引越手続きコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>