force-app/main/default/objects/ServiceContractAll__c/fields/MovingStatement__c.field-meta.xml
<CustomField>
    <fullName>MovingStatement__c</fullName>
    <label>引越明細書</label>
    <length>255</length>
    <type>Text</type>
</CustomField>