force-app/main/default/objects/ServiceContractAll__c/fields/MovingStatementNote__c.field-meta.xml
<CustomField>
    <fullName>MovingStatementNote__c</fullName>
    <label>引越明細書備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>