force-app/main/default/objects/ServiceContractAll__c/fields/MovingTariffNote__c.field-meta.xml
<CustomField>
    <fullName>MovingTariffNote__c</fullName>
    <label>引越料金表備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>