force-app/main/default/objects/ServiceContractAll__c/fields/MovingTrader2__c.field-meta.xml
<CustomField>
    <fullName>MovingTrader2__c</fullName>
    <label>引越業者２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>