force-app/main/default/objects/ServiceContractAll__c/fields/MovingTrader3__c.field-meta.xml
<CustomField>
    <fullName>MovingTrader3__c</fullName>
    <label>引越業者３</label>
    <length>255</length>
    <type>Text</type>
</CustomField>