force-app/main/default/objects/ServiceContractAll__c/fields/MovingTrader5__c.field-meta.xml
<CustomField>
    <fullName>MovingTrader5__c</fullName>
    <label>引越業者５</label>
    <length>255</length>
    <type>Text</type>
</CustomField>