force-app/main/default/objects/ServiceContractAll__c/fields/MovingUnitPrice2__c.field-meta.xml
<CustomField>
    <fullName>MovingUnitPrice2__c</fullName>
    <label>引越単価２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>