force-app/main/default/objects/ServiceContractAll__c/fields/MovingUnitPrice5__c.field-meta.xml
<CustomField>
    <fullName>MovingUnitPrice5__c</fullName>
    <label>引越単価５</label>
    <length>255</length>
    <type>Text</type>
</CustomField>