force-app/main/default/objects/ServiceContractAll__c/fields/MovingUnitPrice6__c.field-meta.xml
<CustomField>
    <fullName>MovingUnitPrice6__c</fullName>
    <label>引越単価６</label>
    <length>255</length>
    <type>Text</type>
</CustomField>