force-app/main/default/objects/ServiceContractAll__c/fields/NewContractDocumentStorageComment__c.field-meta.xml
<CustomField>
    <fullName>NewContractDocumentStorageComment__c</fullName>
    <label>新規契約書類保管シート用コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>