force-app/main/default/objects/ServiceContractAll__c/fields/OCRFAXFeasibility__c.field-meta.xml
<CustomField>
    <fullName>OCRFAXFeasibility__c</fullName>
    <label>OCRFAX可否</label>
    <length>255</length>
    <type>Text</type>
</CustomField>