force-app/main/default/objects/ServiceContractAll__c/fields/ParticipatingStoreRenewal__c.field-meta.xml
<CustomField>
    <fullName>ParticipatingStoreRenewal__c</fullName>
    <label>加盟店更新時</label>
    <length>255</length>
    <type>Text</type>
</CustomField>