force-app/main/default/objects/ServiceContractAll__c/fields/ParticipatingStoreUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>ParticipatingStoreUpdateDate__c</fullName>
    <label>加盟店更新日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>