force-app/main/default/objects/ServiceContractAll__c/fields/ProcessManagementControlCategory__c.field-meta.xml
<CustomField>
    <fullName>ProcessManagementControlCategory__c</fullName>
    <label>工程管理制御区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>