force-app/main/default/objects/ServiceContractAll__c/fields/RakuttoIs__c.field-meta.xml
<CustomField>
    <fullName>RakuttoIs__c</fullName>
    <label>Rakutto有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>