force-app/main/default/objects/ServiceContractAll__c/fields/RakuttoMessageBoardIs__c.field-meta.xml
<CustomField>
    <fullName>RakuttoMessageBoardIs__c</fullName>
    <label>Rakutto伝言板有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>