force-app/main/default/objects/ServiceContractAll__c/fields/RenewalFeeRefundRule__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeeRefundRule__c</fullName>
    <label>更新料返金ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>