force-app/main/default/objects/ServiceContractAll__c/fields/RenewalStaff__c.field-meta.xml
<CustomField>
    <fullName>RenewalStaff__c</fullName>
    <label>更新担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>