force-app/main/default/objects/ServiceContractAll__c/fields/RentCollectDateMasterUse__c.field-meta.xml
<CustomField>
    <fullName>RentCollectDateMasterUse__c</fullName>
    <label>家賃回収日_マスター用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>