force-app/main/default/objects/ServiceContractAll__c/fields/RV1__c.field-meta.xml
<CustomField>
    <fullName>RV1__c</fullName>
    <label>RV1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>