force-app/main/default/objects/ServiceContractAll__c/fields/SelfInfoProtectionLevel__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoProtectionLevel__c</fullName>
    <label>個人情報保護レベル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>