force-app/main/default/objects/ServiceContractAll__c/fields/SelfInfoProtectionLevelNote__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoProtectionLevelNote__c</fullName>
    <label>個人情報保護レベル備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>