force-app/main/default/objects/ServiceContractAll__c/fields/SelfPayInfluenceTokutoku__c.field-meta.xml
<CustomField>
    <fullName>SelfPayInfluenceTokutoku__c</fullName>
    <label>個人負担への影響得々</label>
    <length>255</length>
    <type>Text</type>
</CustomField>