force-app/main/default/objects/ServiceContractAll__c/fields/SelfPayTopicalContact__c.field-meta.xml
<CustomField>
    <fullName>SelfPayTopicalContact__c</fullName>
    <label>個人負担特筆連絡事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>