force-app/main/default/objects/ServiceContractAll__c/fields/SendRoute1__c.field-meta.xml
<CustomField>
    <fullName>SendRoute1__c</fullName>
    <label>送付ルート1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>