force-app/main/default/objects/ServiceContractAll__c/fields/SendRoute2__c.field-meta.xml
<CustomField>
    <fullName>SendRoute2__c</fullName>
    <label>送付ルート2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>