force-app/main/default/objects/ServiceContractAll__c/fields/SendRoute4__c.field-meta.xml
<CustomField>
    <fullName>SendRoute4__c</fullName>
    <label>送付ルート4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>