force-app/main/default/objects/ServiceContractAll__c/fields/SettlementSubmitFrequency__c.field-meta.xml
<CustomField>
    <fullName>SettlementSubmitFrequency__c</fullName>
    <label>決算提出回数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>