force-app/main/default/objects/ServiceContractAll__c/fields/SOChargeTeam__c.field-meta.xml
<CustomField>
    <fullName>SOChargeTeam__c</fullName>
    <label>SO担当ﾁｰﾑ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>