force-app/main/default/objects/ServiceContractAll__c/fields/StandardTaxExtractScheduledDate2__c.field-meta.xml
<CustomField>
    <fullName>StandardTaxExtractScheduledDate2__c</fullName>
    <label>標準課税抽出予定日２計算</label>
    <length>255</length>
    <type>Text</type>
</CustomField>