force-app/main/default/objects/ServiceContractAll__c/fields/StandardTaxExtractScheduledDate3__c.field-meta.xml
<CustomField>
    <fullName>StandardTaxExtractScheduledDate3__c</fullName>
    <label>標準課税抽出予定日３計算</label>
    <length>255</length>
    <type>Text</type>
</CustomField>