force-app/main/default/objects/ServiceContractAll__c/fields/StandardTaxSubmitDate1__c.field-meta.xml
<CustomField>
    <fullName>StandardTaxSubmitDate1__c</fullName>
    <label>標準課税提出日１</label>
    <length>255</length>
    <type>Text</type>
</CustomField>