force-app/main/default/objects/ServiceContractAll__c/fields/StandardTaxSubmitDate2__c.field-meta.xml
<CustomField>
    <fullName>StandardTaxSubmitDate2__c</fullName>
    <label>標準課税提出日２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>