force-app/main/default/objects/ServiceContractAll__c/fields/StandardTaxSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>StandardTaxSubmitDate__c</fullName>
    <label>標準課税提出日表示用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>