force-app/main/default/objects/ServiceContractAll__c/fields/StandardTaxSubmitDestination__c.field-meta.xml
<CustomField>
    <fullName>StandardTaxSubmitDestination__c</fullName>
    <label>標準課税提出先担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>