force-app/main/default/objects/ServiceContractAll__c/fields/StandardTaxSubmitter1__c.field-meta.xml
<CustomField>
    <fullName>StandardTaxSubmitter1__c</fullName>
    <label>標準課税提出者１</label>
    <length>255</length>
    <type>Text</type>
</CustomField>