force-app/main/default/objects/ServiceContractAll__c/fields/StandardTaxSubmitter3__c.field-meta.xml
<CustomField>
    <fullName>StandardTaxSubmitter3__c</fullName>
    <label>標準課税提出者３</label>
    <length>255</length>
    <type>Text</type>
</CustomField>