force-app/main/default/objects/ServiceContractAll__c/fields/StandardTaxSubmitter4__c.field-meta.xml
<CustomField>
    <fullName>StandardTaxSubmitter4__c</fullName>
    <label>標準課税提出者４</label>
    <length>255</length>
    <type>Text</type>
</CustomField>